--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <title>Hello World!</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>TIVO DASHBOARD</h1>
     <!-- All of the Node.js APIs are available in this renderer process. -->
     We are using Node.js <script>document.write(process.versions.node)</script>,
     Chromium <script>document.write(process.versions.chrome)</script>,
     and Electron <script>document.write(process.versions.electron)</script>.
-
+    <iframe src="https://app.powerbi.com/reportEmbed?reportId=70e1c228-3671-4f7e-8441-57ed6c3b8ff6&autoAuth=true&ctid=77117b2a-ecb4-4e42-abb0-de5f657f769e" frameborder="0" width="auto" height="auto"></iframe>
     <script>
       // You can also require other files to run in this process
       require('./renderer.js')
